unpackaged/main/default/objects/Proprietary_Group__c/Proprietary_Group__c.object-meta.xml
<CustomObject>
    <label>Proprietary Group</label>
    <nameField>
        <label>Proprietary  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proprietary Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>