unpackaged/main/default/objects/Proprietary_Group__c/fields/Additional_Moderator__c.field-meta.xml
<CustomField>
    <fullName>Additional_Moderator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to add an Additional moderator to the group for listserv purposes</description>
    <inlineHelpText>Add an additional moderator to the group</inlineHelpText>
    <label>Additional Moderator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proprietary Groups (Additional Moderator)</relationshipLabel>
    <relationshipName>Proprietary_Groups5</relationshipName>
    <type>Lookup</type>
</CustomField>