unpackaged/main/default/objects/Proprietary_Group__c/fields/Average_Yearly_Support_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Yearly_Support_Days__c</fullName>
    <label>Average Yearly Support Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>