unpackaged/main/default/objects/Proprietary_Group__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Default Billing Account used for automations and when not defined.</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Proprietary Groups</relationshipLabel>
    <relationshipName>Proprietary_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>