unpackaged/main/default/objects/Proprietary_Group__c/fields/Billing_Exception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Exception_Notes__c</fullName>
    <label>Billing Exception Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>