unpackaged/main/default/objects/Proprietary_Group__c/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <label>Billing Notes</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>