unpackaged/main/default/objects/Proprietary_Group__c/fields/Composite_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Composite_Run_Date__c</fullName>
    <label>Composite Run Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>