unpackaged/main/default/objects/Proprietary_Group__c/fields/Default_Print_Product__c.field-meta.xml
<CustomField>
    <fullName>Default_Print_Product__c</fullName>
    <label>Default Print Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Grouped by Translation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>