unpackaged/main/default/objects/Proprietary_Group__c/fields/Disconnect_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Notes__c</fullName>
    <label>Disconnect Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>