unpackaged/main/default/objects/Proprietary_Group__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Delete Date</label>
    <type>Date</type>
</CustomField>