unpackaged/main/default/objects/Proprietary_Group__c/fields/French_Language_Products_Services__c.field-meta.xml
<CustomField>
    <fullName>French_Language_Products_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>French Language Products/Services</label>
    <type>Checkbox</type>
</CustomField>