unpackaged/main/default/objects/Proprietary_Group__c/fields/Fulfilled_Meeting_Count_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Meeting_Count_Current_Year__c</fullName>
    <description>Count of engagements related to the group where Engagement Start Date = Current Year. This is a Roll Up Helper field.</description>
    <label>Fulfilled Meeting Count Current Year</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>