unpackaged/main/default/objects/Proprietary_Group__c/fields/Group_Email_Address_Members__c.field-meta.xml
<CustomField>
    <fullName>Group_Email_Address_Members__c</fullName>
    <label>Group Email Address - Members</label>
    <type>Email</type>
</CustomField>