unpackaged/main/default/objects/Proprietary_Group__c/fields/Group_List_Serv__c.field-meta.xml
<CustomField>
    <fullName>Group_List_Serv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group List Serv</label>
    <type>Checkbox</type>
</CustomField>