unpackaged/main/default/objects/Proprietary_Group__c/fields/Has_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Has_Meetings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field is checked if the group does meetings</description>
    <label>Has Meetings</label>
    <type>Checkbox</type>
</CustomField>