unpackaged/main/default/objects/Proprietary_Group__c/fields/Is_a_Multi_Benchmark_Group__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Multi_Benchmark_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Multi-Benchmark Group?</label>
    <type>Checkbox</type>
</CustomField>