unpackaged/main/default/objects/Proprietary_Group__c/fields/Mega_Group_Feeder__c.field-meta.xml
<CustomField>
    <fullName>Mega_Group_Feeder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mega Group Feeder</label>
    <type>Checkbox</type>
</CustomField>