unpackaged/main/default/objects/Proprietary_Group__c/fields/Member_Monthly_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Member_Monthly_Bill_Rate__c</fullName>
    <label>Member Monthly Bill Rate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>