unpackaged/main/default/objects/Proprietary_Group__c/fields/Moderator_Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Team_Manager__c</fullName>
    <formula>Group_Owner__r.Moderator_Team_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator Team Manager</label>
    <type>Text</type>
</CustomField>