unpackaged/main/default/objects/Proprietary_Group__c/fields/NCM_Benchmark_File__c.field-meta.xml
<CustomField>
    <fullName>NCM_Benchmark_File__c</fullName>
    <label>NCM Benchmark File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Benchmark_File</valueSetName>
    </valueSet>
</CustomField>