unpackaged/main/default/objects/Proprietary_Group__c/fields/New_WinM_Migration_Record__c.field-meta.xml
<CustomField>
    <fullName>New_WinM_Migration_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New WinM Migration Record</label>
    <type>Checkbox</type>
</CustomField>