unpackaged/main/default/objects/Proprietary_Group__c/fields/On_Hold_End_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_End_Date__c</fullName>
    <description>End Date for placing this group on hold.</description>
    <inlineHelpText>End Date for placing this group on hold.</inlineHelpText>
    <label>On Hold End Date</label>
    <type>Date</type>
</CustomField>