unpackaged/main/default/objects/Proprietary_Group__c/fields/On_Hold_Initiated__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the On Hold process has been initiated for this group.</description>
    <inlineHelpText>Indicates the On Hold process has been initiated for this group.</inlineHelpText>
    <label>On Hold Initiated</label>
    <type>Checkbox</type>
</CustomField>