unpackaged/main/default/objects/Proprietary_Group__c/fields/On_Hold_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Start_Date__c</fullName>
    <description>Start Date for placing this group on hold.</description>
    <inlineHelpText>Start Date for placing this group on hold.</inlineHelpText>
    <label>On Hold Start Date</label>
    <type>Date</type>
</CustomField>