unpackaged/main/default/objects/Proprietary_Group__c/fields/Proprietary_Group_18__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Group_18__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietary Group (18)</label>
    <type>Text</type>
</CustomField>