unpackaged/main/default/objects/Proprietary_Group__c/fields/Proprietary_Group_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Group_ID_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietary Group ID (18)</label>
    <type>Text</type>
</CustomField>