unpackaged/main/default/objects/Proprietary_Group__c/fields/Proprietary_Master_Group__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Master_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietary Master Group</label>
    <referenceTo>Proprietary_Master_Group__c</referenceTo>
    <relationshipLabel>Proprietary Groups</relationshipLabel>
    <relationshipName>Proprietary_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>