unpackaged/main/default/objects/Proprietary_Group__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Fixed Dealer Rate</fullName>
            </value>
            <value>
                <fullName>Monthly Fixed Group Rate</fullName>
            </value>
            <value>
                <fullName>Monthly Rate Schedule</fullName>
            </value>
            <value>
                <fullName>Moratorium - Monthly Fixed Dealer Rate</fullName>
            </value>
            <value>
                <fullName>Moratorium - Monthly Fixed Group Rate</fullName>
            </value>
            <value>
                <fullName>Special Bill - Per Attendee</fullName>
            </value>
            <value>
                <fullName>Special Bill - Per Day</fullName>
            </value>
            <value>
                <fullName>Special Bill - Per Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>