unpackaged/main/default/objects/Proprietary_Group__c/fields/Receives_Product_Once_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Receives_Product_Once_Quarterly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates these customers only receive products once per quarter and their shipping fees are adjusted accordingly.</description>
    <inlineHelpText>Indicates these customers only receive products once per quarter and their shipping fees are adjusted accordingly.</inlineHelpText>
    <label>Receives Product Once Quarterly</label>
    <type>Checkbox</type>
</CustomField>