unpackaged/main/default/objects/Proprietary_Group__c/fields/Shipping_Label__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Label__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Label</label>
    <referenceTo>Shipping_Label__c</referenceTo>
    <relationshipLabel>Proprietary Groups</relationshipLabel>
    <relationshipName>Proprietary_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>