unpackaged/main/default/objects/Proprietary_Group__c/fields/Super_Type__c.field-meta.xml
<CustomField>
    <fullName>Super_Type__c</fullName>
    <description>This field should be synced with WinMaster.</description>
    <label>WinMaster Super Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer 20 Groups</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Industry 20 Group</fullName>
            </value>
            <value>
                <fullName>Manager 20 Groups</fullName>
            </value>
            <value>
                <fullName>Manufacturers Groups</fullName>
            </value>
            <value>
                <fullName>NCMi</fullName>
            </value>
            <value>
                <fullName>PPP</fullName>
            </value>
            <value>
                <fullName>Proprietary Groups</fullName>
            </value>
            <value>
                <fullName>Public Groups</fullName>
            </value>
            <value>
                <fullName>Retail Ops</fullName>
            </value>
            <value>
                <fullName>Samples</fullName>
            </value>
            <value>
                <fullName>State Auto Associations</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>HealthCheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>