unpackaged/main/default/objects/Proprietary_Group__c/fields/Support_Staff_Manager__c.field-meta.xml
<CustomField>
    <fullName>Support_Staff_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proprietary Groups (Support Staff Manager)</relationshipLabel>
    <relationshipName>Proprietary_Groups3</relationshipName>
    <type>Lookup</type>
</CustomField>