unpackaged/main/default/objects/Proprietary_Group__c/fields/WinMaster_Migration_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>WinMaster_Migration_Date_Stamp__c</fullName>
    <label>WinMaster Migration Date Stamp</label>
    <type>DateTime</type>
</CustomField>