unpackaged/main/default/objects/Proprietary_Group__c/recordTypes/Quarterly.recordType-meta.xml
<RecordType>
    <fullName>Quarterly</fullName>
    <active>true</active>
    <label>Quarterly</label>
</RecordType>