unpackaged/main/default/objects/Proprietary_Group__c/validationRules/Group_Owner_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Owner_Required</fullName>
    <active>true</active>
    <description>The Group Owner field cannot be null</description>
    <errorConditionFormula>ISBLANK( Group_Owner__c )</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>There must be a Group Owner.</errorMessage>
</ValidationRule>