unpackaged/main/default/objects/Proprietary_Group__c/listViews/Active_OH_BMRK.listView-meta.xml
<ListView>
    <fullName>Active_OH_BMRK</fullName>
    <columns>NAME</columns>
    <columns>Group_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Billing_Account__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Default_Print_Product__c</columns>
    <columns>Composite_Run_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,On Hold</value>
    </filters>
    <label>Active/OH BMRK</label>
</ListView>