unpackaged/main/default/objects/Proprietary_Group__c/listViews/Benchmark_Plan_BAF.listView-meta.xml
<ListView>
    <fullName>Benchmark_Plan_BAF</fullName>
    <columns>NAME</columns>
    <columns>Group_Name__c</columns>
    <columns>Group_Number__c</columns>
    <columns>Group_Owner__c</columns>
    <columns>Support_Staff__c</columns>
    <columns>Meeting_Support_Contact__c</columns>
    <columns>Support_Staff_Manager__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Meetings_per_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group_Owner__c</field>
        <operation>equals</operation>
        <value>Brian Faulkenberry</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Proprietary_Group__c.Monthly</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Deleted</value>
    </filters>
    <label>Benchmark Plan - BAF</label>
</ListView>